--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
     "devbuild": "webpack --mode development"
   },
   "dependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
+    "@reduxjs/toolkit": "^1.5.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.11",
-    "@types/webpack": "4.1.4"
+    "@types/webpack": "4.1.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "file-loader": "^6.2.0",
